[package]
name = "gel"
version = "0.1.0"
authors = ["commit-person <commit-person@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dirs = "2.0.1"
reqwest = "0.9.18"
roxmltree = "0.6.1"
scraper = "0.10.1"
select = "0.4.3"
tantivy = "0.10.0"
